--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,5 @@
     .container {
       padding-top: 70px;
-      padding-bottom: 70px;
     }
     
     header {
@@ -13,8 +12,7 @@
     }
 
     footer {
-      padding-top:30px;
-      padding-bottom: 30px;
+      padding:30px 0px 30px;
     }
 
     .center-block {
@@ -53,6 +51,10 @@
 
     .twitter-embed {
       margin-bottom:30px !important;
+    }
+
+    #closer {
+      background-color:#f5f5f5;
     }
 
     /* Footer styling */
