--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,7 @@
-    .container {
-      padding-top: 70px;
-    }
-    
     header {
       padding-top:15px;
       padding-bottom:15px;
+      // margin-bottom:40px;
     }
 
     header .lead {
@@ -13,6 +10,24 @@
 
     footer {
       padding:30px 0px 30px;
+    }
+
+    .container {
+      padding-right: 5%;
+      padding-left: 5%;
+      margin-right: auto;
+      margin-left: auto;
+      
+    }
+
+    .featurette {
+      border-bottom: 1px solid #e5e5e5;
+      padding-top:20px;
+      padding-bottom:50px;
+    }
+
+    .featurette .first {
+      padding-top:40px !important;
     }
 
     .center-block {
@@ -35,6 +50,10 @@
       color: #ffffff;
     }
 
+    .section {
+      border-bottom: 1px solid #e5e5e5;
+    }
+
     .img-responsive {
       margin-bottom:20px;
     }
@@ -51,10 +70,12 @@
 
     .twitter-embed {
       margin-bottom:30px !important;
+      width:70%;
+
     }
 
-    #closer {
-      background-color:#f5f5f5;
+    .closing {
+      margin-bottom:0px !important;
     }
 
     /* Footer styling */
