--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,21 +44,20 @@
       padding-bottom:10px;
     }
 
-    /* Ribbon styling */
-    .bg-4 { 
+    .ribbon { 
       background-color: #2f2f2f;
       color: #ffffff;
     }
 
-    .section {
-      border-bottom: 1px solid #e5e5e5;
-    }
+    /* Body styling */
 
     .img-responsive {
       margin-bottom:20px;
     }
 
-    /* Body styling */
+    .btn-primary {
+      background-image: none;
+    }
 
     ol li {
       margin-bottom:10px;
